--- a/IflyotaPortalSwift/HomePage/View/NewView.xib
+++ b/IflyotaPortalSwift/HomePage/View/NewView.xib
@@ -16,13 +16,15 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="36"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="hot-icon" translatesAutoresizingMaskIntoConstraints="NO" id="8x1-VX-CeQ">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hot-icon" translatesAutoresizingMaskIntoConstraints="NO" id="8x1-VX-CeQ">
                     <rect key="frame" x="10" y="11" width="14" height="14"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="14" id="C7H-l9-okS"/>
+                        <constraint firstAttribute="width" constant="14" id="dWr-T2-wMY"/>
+                    </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cNG-3K-dmh">
-                    <rect key="frame" x="38" y="-2" width="337" height="38"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cNG-3K-dmh">
+                    <rect key="frame" x="38" y="0.0" width="337" height="36"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="Button">
@@ -31,6 +33,14 @@
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="cNG-3K-dmh" secondAttribute="bottom" id="9h4-tL-T6E"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="cNG-3K-dmh" secondAttribute="trailing" id="Dza-VS-qpO"/>
+                <constraint firstItem="8x1-VX-CeQ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="GWT-eh-n0e"/>
+                <constraint firstItem="8x1-VX-CeQ" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="KX2-qO-EYl"/>
+                <constraint firstItem="cNG-3K-dmh" firstAttribute="leading" secondItem="8x1-VX-CeQ" secondAttribute="trailing" constant="14" id="YtA-78-b4g"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="top" secondItem="cNG-3K-dmh" secondAttribute="top" id="nEC-iL-66v"/>
+            </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
