完成线路详情中的行程列表

--- a/IflyotaPortalSwift/Route/View/RoutrDetailCell.xib
+++ b/IflyotaPortalSwift/Route/View/RoutrDetailCell.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -52,9 +53,9 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XOA-bi-RrB">
-                        <rect key="frame" x="153.5" y="11" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="153.5" y="13.5" width="35.5" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" name="GrayTitleColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -84,5 +85,8 @@
     <resources>
         <image name="cycle" width="32" height="32"/>
         <image name="route-icon-scene" width="28" height="24"/>
+        <namedColor name="GrayTitleColor">
+            <color red="0.65499997138977051" green="0.6589999794960022" blue="0.66299998760223389" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
