--- a/IflyotaPortalSwift/Hotel/Controller/CalendarViewController.xib
+++ b/IflyotaPortalSwift/Hotel/Controller/CalendarViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13528" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13526"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Tw3-qq-17F" customClass="JTAppleCalendarView" customModule="JTAppleCalendar">
-                    <rect key="frame" x="10" y="129" width="355" height="538"/>
+                    <rect key="frame" x="10" y="65" width="355" height="602"/>
                     <color key="backgroundColor" red="0.96068006753921509" green="0.96084433794021606" blue="0.96066969633102417" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JiS-3M-IuE">
                         <size key="itemSize" width="50" height="50"/>
@@ -32,7 +32,7 @@
                     </collectionViewFlowLayout>
                 </collectionView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hLj-7x-HAf">
-                    <rect key="frame" x="0.0" y="84" width="375" height="45"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="45"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Kqa-uW-sVh">
                             <rect key="frame" x="10" y="0.0" width="355" height="45"/>
@@ -98,7 +98,7 @@
                 <constraint firstItem="hLj-7x-HAf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="4gD-VM-PPK"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Tw3-qq-17F" secondAttribute="trailing" constant="10" id="5y3-Vb-fv7"/>
                 <constraint firstItem="Tw3-qq-17F" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="AHN-8C-ZmZ"/>
-                <constraint firstItem="hLj-7x-HAf" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="64" id="JRR-YX-blf"/>
+                <constraint firstItem="hLj-7x-HAf" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="JRR-YX-blf"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="hLj-7x-HAf" secondAttribute="trailing" id="LqX-nd-ykG"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Tw3-qq-17F" secondAttribute="bottom" id="TdG-KO-VU5"/>
                 <constraint firstItem="Tw3-qq-17F" firstAttribute="top" secondItem="hLj-7x-HAf" secondAttribute="bottom" id="YSb-mC-shk"/>
